==> ARMmbed/mbed-os/targets/TARGET_NUVOTON/TARGET_M460/can_api.c <==
#include "can_api.h"
#include "cmsis.h"
#include "mbed_error.h"
#include "mbed_assert.h"
#include "mbed_toolchain.h"
#include "PeripheralPins.h"
#include "gpio_api.h"
#include "nu_modutil.h"
#include "nu_bitutil.h"
#include <string.h>
#include <stdbool.h>
#include <assert.h>
#define NU_CAN_EN_MULT_HNDL         0
#define NU_CAN_MAXNUM_HNDL          8
#define NU_CAN_MAXNUM_SIDFLTR       NU_CAN_MAXNUM_HNDL
#define NU_CAN_MAXNUM_XIDFLTR       NU_CAN_MAXNUM_HNDL
#define NU_CAN_MAXNUM_RXBUF         (NU_CAN_MAXNUM_SIDFLTR + NU_CAN_MAXNUM_XIDFLTR)
#define NU_STR_(X)  #X
#define NU_STR(X)   NU_STR_(X)

void can_free(can_t *obj)
{
    const struct nu_modinit_s *modinit = get_modinit(obj->can, can_modinit_tab);
    MBED_ASSERT(modinit != NULL);
    MBED_ASSERT(modinit->modname == (int) obj->can);

    CANFD_T *can_base = (CANFD_T *) NU_MODBASE(obj->can);

    CANFD_Close(can_base);

    // Reset this module
    SYS_ResetModule(modinit->rsetidx);

    // Disable interrupts
    CANFD_DisableInt(can_base,
                     0xFFFFFFFF,    // interrupt line 0
                     0,             // interrupt line 1 unused
                     0xFFFFFFFF,    // Tx Buffer Transmission 0-31 Interrupts
                     0xFFFFFFFF);   // Tx Buffer Cancellation Finished 0-31 Interrupts
    NVIC_DisableIRQ(modinit->irq_n);

    // Disable IP clock
    CLK_DisableModuleClock(modinit->clkidx);

    /* Free up pins */
    gpio_set(obj->pin_rd);
    gpio_set(obj->pin_td);
    obj->pin_rd = NC;
    obj->pin_td = NC;
}

int can_frequency(can_t *obj, int hz)
{
    const struct nu_modinit_s *modinit = get_modinit(obj->can, can_modinit_tab);
    MBED_ASSERT(modinit != NULL);
    MBED_ASSERT(modinit->modname == (int) obj->can);

    struct nu_can_var *var = (struct nu_can_var *) modinit->var;

    /* Based on previous configuration */
    CANFD_FD_T *canfd_config = &var->canfd_config;

    canfd_config->sBtConfig.sNormBitRate.u32BitRate = hz;

    can_reconfig(obj, canfd_config);

    /* With BSP CAN FD driver, all filters configured before will get cleared by above call.
     * Reconfigure them back. */
    can_filters_reconfig(obj);

    /* 1 on success, or 0 on failure */
    return 1;
}

void can_irq_free(can_t *obj)
{
    const struct nu_modinit_s *modinit = get_modinit(obj->can, can_modinit_tab);
    MBED_ASSERT(modinit != NULL);
    MBED_ASSERT(modinit->modname == (int) obj->can);

    struct nu_can_var *var = (struct nu_can_var *) modinit->var;

    var->irq_handler = NULL;
    var->irq_context = 0;
}

void can_irq_set(can_t *obj, CanIrqType irq, uint32_t enable)
{
    if (enable) {
        const struct nu_modinit_s *modinit = get_modinit(obj->can, can_modinit_tab);
        MBED_ASSERT(modinit != NULL);
        MBED_ASSERT(modinit->modname == (int) obj->can);

        struct nu_can_var *var = (struct nu_can_var *) modinit->var;

        NVIC_SetVector(modinit->irq_n, (uint32_t) var->vec);
        NVIC_EnableIRQ(modinit->irq_n);
    }

    /* We use only interrupt line 0. */
    uint32_t line0_interrupts = 0;
    uint32_t line1_interrupts = 0;

    /* Interrupt mapping from HAL CAN to MCU CANFD */
    switch (irq) {
        case IRQ_RX:
            line0_interrupts = CANFD_IE_RF0NE_Msk | CANFD_IE_RF1NE_Msk | CANFD_IE_DRXE_Msk;
            break;

        case IRQ_TX:
            line0_interrupts = CANFD_IE_TCE_Msk;
            break;

        case IRQ_ERROR:
            line0_interrupts = CANFD_IE_EWE_Msk;
            break;

        case IRQ_OVERRUN:
            break;

        case IRQ_WAKEUP:
            break;

        case IRQ_PASSIVE:
            line0_interrupts = CANFD_IE_EPE_Msk;
            break;

        case IRQ_ARB:
            break;

        case IRQ_BUS:
            line0_interrupts = CANFD_IE_BOE_Msk;
            break;

        case IRQ_READY:
            break;

        default:
            break;
    }

    CANFD_T *can_base = (CANFD_T *) NU_MODBASE(obj->can);

    uint32_t ie = CANFD_ReadReg(&can_base->IE);

    /* Tx Buffer Transmission/Cancellation Finished Interrupt Enable
     *
     * Each Tx Buffer has its own Transmission/Cancellation Finished Interrupt Enable bit.
     * Dependent on their overall switch IE.TCE/IE.TCFE, these bits are set altogether or not.
     */
    uint32_t txbtie = (CANFD_IE_TCE_Msk & (ie | line0_interrupts)) ? 0xFFFFFFFF : 0;
    uint32_t txbcie = (CANFD_IE_TCFE_Msk & (ie | line0_interrupts)) ? 0xFFFFFFFF : 0;

    if (enable) {
        CANFD_EnableInt(can_base, line0_interrupts, line1_interrupts, txbtie, txbcie);
    } else {
        CANFD_DisableInt(can_base, line0_interrupts, line1_interrupts, txbtie, txbcie);
    }
}

int can_write(can_t *obj, CAN_Message msg, int cc)
{
    /* Unused */
    (void) cc;

    const struct nu_modinit_s *modinit = get_modinit(obj->can, can_modinit_tab);
    MBED_ASSERT(modinit != NULL);
    MBED_ASSERT(modinit->modname == (int) obj->can);

    struct nu_can_var *var = (struct nu_can_var *) modinit->var;

    CANFD_T *can_base = (CANFD_T *) NU_MODBASE(obj->can);

    /* Populate the message */
    CANFD_FD_MSG_T *msg_staging = &var->msg_staging;
    memset(msg_staging, 0x00, sizeof(CANFD_FD_MSG_T));

    /* Message ID */
    msg_staging->u32Id = msg.id;
    /* CANFD_FD_MSG_T.u32DLC, not suitable naming, is data length in bytes, not data length code. */
    msg_staging->u32DLC = (msg.len <= CANFD_MAX_MESSAGE_BYTES) ? msg.len : CANFD_MAX_MESSAGE_BYTES;
    memcpy(msg_staging->au8Data, msg.data, msg_staging->u32DLC);
    /* Standard/extended message */
    msg_staging->eIdType = (msg.format == CANStandard) ? eCANFD_SID : eCANFD_XID;
    /* Data/remote message */
    msg_staging->eFrmType = (msg.type == CANData) ? eCANFD_DATA_FRM : eCANFD_REMOTE_FRM;
    /* No FD format */
    msg_staging->bFDFormat = 0;
    /* No bit rate switch */
    msg_staging->bBitRateSwitch = 0;

    int success;

    /* BSP CAN driver supports Tx Dedicated Buffer */
    uint32_t i;
    for (i = 0; i < var->canfd_config.sElemSize.u32TxBuf; i ++) {
        success = CANFD_TransmitTxMsg(can_base, i, msg_staging);
        if (success) {
            return 1;
        }
    }

    /* BSP CAN driver supports no Tx FIFO/Queue */

    return 0;
}

int can_read(can_t *obj, CAN_Message *msg, int handle)
{
#if NU_CAN_EN_MULT_HNDL
    /* Check validity of filter handle */
    if (handle < 0 || handle >= NU_CAN_MAXNUM_HNDL) {
        error("Support max " NU_STR(NU_CAN_MAXNUM_HNDL) " CAN filters");
        return 0;
    }
#else
    /* Single filter handle 0 */
    int32_t handle_orig = handle;
    (void) handle_orig;
    handle = 0;
#endif

    const struct nu_modinit_s *modinit = get_modinit(obj->can, can_modinit_tab);
    MBED_ASSERT(modinit != NULL);
    MBED_ASSERT(modinit->modname == (int) obj->can);

    struct nu_can_var *var = (struct nu_can_var *) modinit->var;
    const struct nu_can_filter *filter = &var->filters[handle];
    CANFD_FD_MSG_T *msg_staging = &var->msg_staging;

    CANFD_T *can_base = (CANFD_T *) NU_MODBASE(obj->can);

    if (filter->rxbuf_type == NU_CAN_RXBUF_TYPE_FIFO_0 ||
        filter->rxbuf_type == NU_CAN_RXBUF_TYPE_FIFO_1) {
        uint32_t fifo_idx = (filter->rxbuf_type == NU_CAN_RXBUF_TYPE_FIFO_0) ? 0: 1;
        while (1) {
            if (!CANFD_ReadRxFifoMsg(can_base, fifo_idx, msg_staging)) {
                /* Rx FIFO 0/1 empty */
                goto message_no_accepted;
            }

            if (!can_filter_message_matched(filter, msg_staging)) {
                /* Not matched, go next one */
                continue;
            }

            /* Find one matched */
            goto message_matched;
        }
    } else {
        /* Get dedicated Rx Buffer element index for SID/XID filter element by filter handle */
        uint32_t sidfltr_rxdbf_idx = can_filter_sidfltr_rxbuf_index(filter);
        uint32_t xidfltr_rxdbf_idx = can_filter_xidfltr_rxbuf_index(filter);

        /* Receive from dedicated Rx Buffer for SID filter element */
        if (filter->format == CANStandard || filter->format == CANAny) {
            if (!CANFD_ReadRxBufMsg(can_base, sidfltr_rxdbf_idx, msg_staging)) {
                /* Dedicated Rx Buffer empty */
                goto check_xid_filter;
            }

            if (!can_filter_message_matched(filter, msg_staging)) {
                /* Not matched */
                goto check_xid_filter;
            }

            /* Find one matched */
            goto message_matched;
        }

check_xid_filter:

        /* Receive from dedicated Rx Buffer for XID filter element */
        if (filter->format == CANExtended || filter->format == CANAny) {
            if (!CANFD_ReadRxBufMsg(can_base, xidfltr_rxdbf_idx, msg_staging)) {
                /* Dedicated Rx Buffer empty */
                goto message_no_accepted;
            }

            if (!can_filter_message_matched(filter, msg_staging)) {
                /* Not matched */
                goto message_no_matched;
            }

            /* Find one matched */
            goto message_matched;
        }
    }

message_no_accepted:
message_no_matched:

    return 0;

message_matched:

    /* ID match, populate the message */
    memset(msg, 0x00, sizeof(CAN_Message));

    /* Message ID */
    msg->id = msg_staging->u32Id;
    /* CANFD_FD_MSG_T.u32DLC, not suitable naming, is data length in bytes, not data length code. */
    msg->len = (msg_staging->u32DLC <= sizeof(msg->data)) ? msg_staging->u32DLC : sizeof(msg->data);
    memcpy(&msg->data[0], &msg_staging->au8Data[0], msg->len);
    /* Standard/Extended message */
    msg->format = (msg_staging->eIdType == eCANFD_SID) ? CANStandard : CANExtended;
    /* Data/Remote message */
    msg->type = (msg_staging->eFrmType == eCANFD_DATA_FRM) ? CANData : CANRemote;

    return 1;
}

int can_mode(can_t *obj, CanMode mode)
{
    bool monitor_enabled;
    bool test_enabled;
    bool loopback_enabled;

    switch (mode) {
        case MODE_RESET:
            MBED_FALLTHROUGH;
        case MODE_NORMAL:
            monitor_enabled = false;
            test_enabled = false;
            loopback_enabled = false;
            break;

        case MODE_SILENT:
            monitor_enabled = true;
            test_enabled = false;
            loopback_enabled = false;
            break;

        case MODE_TEST_GLOBAL:
            MBED_FALLTHROUGH;
        case MODE_TEST_LOCAL:
            monitor_enabled = false;
            test_enabled = true;
            loopback_enabled = true;
            break;

        case MODE_TEST_SILENT:
            monitor_enabled = true;
            test_enabled = true;
            loopback_enabled = true;
            break;

        default:
            /* 1 if success, or 0 if failure */
            return 0;
    }

    CANFD_T *can_base = (CANFD_T *) NU_MODBASE(obj->can);
    
    /* Enter INIT mode for configuration */
    CANFD_RunToNormal(can_base, false);

    /* Enable write-protect configuration change */
    can_base->CCCR = CANFD_ReadReg(&can_base->CCCR) | CANFD_CCCR_CCE_Msk;

    /* Enable monitor or not */
    if (monitor_enabled) {
        can_base->CCCR = CANFD_ReadReg(&can_base->CCCR) | CANFD_CCCR_MON_Msk;
    } else {
        can_base->CCCR = CANFD_ReadReg(&can_base->CCCR) & ~CANFD_CCCR_MON_Msk;
    }

    /* Enable Test mode or not */
    if (test_enabled) {
        can_base->CCCR = CANFD_ReadReg(&can_base->CCCR) | CANFD_CCCR_TEST_Msk;
    } else {
        can_base->CCCR = CANFD_ReadReg(&can_base->CCCR) & ~CANFD_CCCR_TEST_Msk;
    }

    /* Enable loopback or not */
    if (loopback_enabled) {
        can_base->TEST = CANFD_ReadReg(&can_base->TEST) | CANFD_TEST_LBCK_Msk;
    } else {
        can_base->TEST = CANFD_ReadReg(&can_base->TEST) & ~CANFD_TEST_LBCK_Msk;
    }

    /* Leave INIT mode for normal operation */
    CANFD_RunToNormal(can_base, true);

    /* 1 if success, or 0 if failure */
    return 1;
}

int can_filter(can_t *obj, uint32_t id, uint32_t mask, CANFormat format, int32_t handle)
{
#if NU_CAN_EN_MULT_HNDL
    /* Check validity of filter handle */
    if (handle < 0 || handle >= NU_CAN_MAXNUM_HNDL) {
        error("Support max " NU_STR(NU_CAN_MAXNUM_HNDL) " CAN filters");
        return 0;
    }
#else
    /* Single filter handle 0 */
    int32_t handle_orig = handle;
    (void) handle_orig;
    handle = 0;
#endif

    const struct nu_modinit_s *modinit = get_modinit(obj->can, can_modinit_tab);
    MBED_ASSERT(modinit != NULL);
    MBED_ASSERT(modinit->modname == (int) obj->can);

    struct nu_can_var *var = (struct nu_can_var *) modinit->var;
    struct nu_can_filter *filter = &var->filters[handle];

    /* Keep user-defined filter configuration */
    filter->id = id;
    filter->mask = mask;
    filter->format = format;
    filter->handle = handle;

    /* Bind filter to Rx Buffer type */
    can_filter_bind_rxbuf_type(obj, filter);
    MBED_ASSERT(filter->rxbuf_type != NU_CAN_RXBUF_TYPE_NONE);

    if (can_filter_config(obj, filter)) {
#if NU_CAN_EN_MULT_HNDL
        return handle;
#else
        /* NOTE: 0 is ambiguous, error or filter handle 0. */
        return handle_orig;
#endif
    } else {
        return 0;
    }
}

unsigned char can_rderror(can_t *obj)
{
    CANFD_T *can_base = (CANFD_T *) NU_MODBASE(obj->can);

    uint32_t ecr = CANFD_ReadReg(&can_base->ECR);
    return (uint8_t) ((ecr >> CANFD_ECR_REC_Pos) & CANFD_ECR_REC_Msk);
}

unsigned char can_tderror(can_t *obj)
{
    CANFD_T *can_base = (CANFD_T *) NU_MODBASE(obj->can);

    uint32_t ecr = CANFD_ReadReg(&can_base->ECR);
    return (uint8_t) ((ecr >> CANFD_ECR_TEC_Pos) & CANFD_ECR_TEC_Msk);
}

void can_monitor(can_t *obj, int silent)
{
    CANFD_T *can_base = (CANFD_T *) NU_MODBASE(obj->can);

    bool test_enabled = CANFD_ReadReg(&can_base->CCCR) & CANFD_CCCR_TEST_Msk;

    CanMode mode;

    if (silent) {
        if (test_enabled) {
            mode = MODE_TEST_SILENT;
        } else {
            mode = MODE_SILENT;
        }
    } else {
        if (test_enabled) {
            mode = MODE_TEST_GLOBAL;
        } else {
            mode = MODE_NORMAL;
        }
    }

    can_mode(obj, mode);
}
